Fixed icon links being off-center from img

--- a/src/app/app.component.css
+++ b/src/app/app.component.css
@@ -1,9 +1,8 @@
 
 
 .icon-link {
-    padding: 20px;
-    max-height: 30px;
-    max-width: 30px;
+    max-height: 40px;
+    max-width: 40px;
     transition: 0.3s;
 }
 
